Opened 3 years ago
Closed 2 years ago
#17850 closed bug (fixed)
Vision crash while chosing font and locked the system
Reported by: | Starcrasher | Owned by: | madmax |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Servers/app_server | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
This is on 64 bit nightly hrev56309
In Vision preferences, You have a panel to chose fonts. It doesn't seem to save choices but it isn't the biggest problem.
Select the kind of message that you want to change, then scroll the font list down to select a font. As the font list is a kind of preview by itself, it will crash. Note that I have a lot of fonts installed (all from HaikuDepot). First time it crashed on Noto Sans Khmer, another time on Noto Sans arabic so it doesn't seem to be a specific font.
Unfortunately, the system completely hangs and it is impossible to launch the debugger; the mouse is still moving but keyboard is not responding.
For info, this bug has also been reported here
Attachments (1)
Change History (15)
comment:1 by , 3 years ago
comment:2 by , 3 years ago
Component: | - General → Servers/app_server |
---|---|
Owner: | changed from | to
Version: | R1/beta3 → R1/Development |
comment:3 by , 3 years ago
After more tests, I understood why it was not saving the font choice. Clicking on font family name (i.e. Noto Sans) is sufficient to make the notch appear but you have to select the variant (i.e. Regular) to make it remember the setting.
It only crash if glyphs consigns are fully activated in Appearance.
Actually, I wasn't using the right shortcut and I'm able to call the debugger. So, if you need more info..
comment:4 by , 2 years ago
No crashes or hangs here on the Vision font selector. But I only have the default fonts installed...
comment:6 by , 2 years ago
Unfortunately, it's still freezing when scrolling with full glyphs instructions. I guess that it is in the drawing of some fonts. I noticed that vertical alignment is really wrong for some of them. I will try to make a list of suspects to ease replication.
comment:7 by , 2 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
I can replicate this after installing all the fonts in HD. Looks like an issue with fallback fonts: I have not triggered it yet with the fallback path disabled.
comment:8 by , 2 years ago
Could you try with https://review.haiku-os.org/c/haiku/+/5557? Solves the issue for me.
comment:9 by , 2 years ago
I tried to use the corresponding testbuild but, I'm not good at that and didn't even manage to boot... Sorry, I'm not capable to test.
This patch won't fix the vertical alignment problem (for Noto Nastaliq Urdu and others) but the important is that it prevents the freeze. well done and thank you.
comment:10 by , 2 years ago
From testbuild iso, I finally managed to install a qemu VM with internet access. It allowed me to use HaikuDepot and install a bunch of fonts. I can confirm that there's no more freeze. Thanks again
comment:11 by , 2 years ago
Unfortunately, after installing even more fonts on the VM, I managed to replicate the freeze. I made a list of font packages installed.
It has stopped on Noto Sans Georgian, Noto Sans Hebrew, Noto Sans Kannada, Noto Sans Khmer or Noto Sans Tamil but there can be more that hang.
I noticed that if you are scrolling gently, you can pass these but if you put your mouse over the little down arrow... then you can be sure that it will freeze.
I've seen that you made a new version of the patch, maybe is it handling these cases already?
comment:13 by , 2 years ago
comment:14 by , 2 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | in-progress → closed |
Excellent, thanks for testing!
Replying to Starcrasher:
Regression in hrev56273 ... hrev56276 ??