app_server: remove style ID 0 from font fallbacks

For starters, all the fonts in the list have a "Regular" variant with
the same codepoints, so the new style won't provide any missing glyph,
at least for non-modified builds.

Then, ID 0 is the first style loaded, which is "Regular" for some fonts,
again being useless, and "Thin" for others, giving the chance for a
deadlock:
1. Thread R is looking for fallbacks for a Regular font and gets to lock
   the "same style" batch.
2. Thread T is looking for fallbacks for a Thin font, gets to lock the
   "same style" batch and blocks on R for the "Regular" style batch.
3. R goes through the "Regular" batch, which it already had, gets to the
   "ID 0" batch and blocks on T for "Noto Sans Thai - Thin".

Fixes: #17850
Change-Id: Ic352fadc46eb257d2bca4804962b11ab1eb9fa12